[gd_scene load_steps=2 format=3 uid="uid://cl0w5vv8n31nu"]

[ext_resource type="Script" uid="uid://cl4t1ptirxd51" path="res://Dashed/Scripts/main_menu.gd" id="1_xt0ia"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_xt0ia")

[node name="Title" type="Label" parent="."]
custom_minimum_size = Vector2(1920, 500)
offset_right = 40.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 300
text = "Dashad"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="."]
custom_minimum_size = Vector2(1920, 580)
offset_top = 500.0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="MainButtons" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="play" type="Button" parent="CenterContainer/MainButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 75
text = "PLAY"

[node name="settigns" type="Button" parent="CenterContainer/MainButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 75
text = "SETTINGS"

[node name="credits" type="Button" parent="CenterContainer/MainButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 75
text = "CREDITS"

[node name="quit" type="Button" parent="CenterContainer/MainButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 75
text = "QUIT"

[node name="CreditsMenu" type="VBoxContainer" parent="CenterContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="CenterContainer/CreditsMenu"]
custom_minimum_size = Vector2(1000, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 120
text = "The Game aaaaaaaaa"
horizontal_alignment = 1
autowrap_mode = 2

[node name="back" type="Button" parent="CenterContainer/CreditsMenu"]
custom_minimum_size = Vector2(353, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 75
text = "FULLSCREEN"

[node name="SettingsMenu" type="VBoxContainer" parent="CenterContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 16

[node name="back" type="Button" parent="CenterContainer/SettingsMenu"]
custom_minimum_size = Vector2(353, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 75
text = "BACK"

[node name="fullscreen" type="CheckBox" parent="CenterContainer/SettingsMenu"]
layout_mode = 2
theme_override_font_sizes/font_size = 75
text = "FULLSCREEN"

[node name="mainvolslider" type="HSlider" parent="CenterContainer/SettingsMenu"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
max_value = 1.0
step = 0.001
value = 1.0

[node name="Label" type="Label" parent="CenterContainer/SettingsMenu/mainvolslider"]
custom_minimum_size = Vector2(484, 55)
layout_mode = 0
offset_top = -16.0
offset_right = 484.0
offset_bottom = 39.0
theme_override_font_sizes/font_size = 40
text = "MAIN VOLUME"
horizontal_alignment = 1

[node name="musicvolslider" type="HSlider" parent="CenterContainer/SettingsMenu"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
max_value = 1.0
step = 0.001
value = 1.0

[node name="Label" type="Label" parent="CenterContainer/SettingsMenu/musicvolslider"]
custom_minimum_size = Vector2(484, 55)
layout_mode = 0
offset_top = -16.0
offset_right = 484.0
offset_bottom = 39.0
theme_override_font_sizes/font_size = 40
text = "MUSIC VOLUME"
horizontal_alignment = 1

[node name="sfxvolslider" type="HSlider" parent="CenterContainer/SettingsMenu"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
max_value = 1.0
step = 0.001
value = 1.0

[node name="Label" type="Label" parent="CenterContainer/SettingsMenu/sfxvolslider"]
custom_minimum_size = Vector2(484, 55)
layout_mode = 0
offset_top = -16.0
offset_right = 484.0
offset_bottom = 39.0
theme_override_font_sizes/font_size = 40
text = "SFX VOLUME"
horizontal_alignment = 1

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -4096
offset_right = 1936.0
offset_bottom = 1080.0
mouse_filter = 2
color = Color(0.62352943, 0.24313726, 0.5019608, 1)

[connection signal="pressed" from="CenterContainer/CreditsMenu/back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="CenterContainer/SettingsMenu/back" to="." method="_on_back_pressed"]
[connection signal="toggled" from="CenterContainer/SettingsMenu/fullscreen" to="." method="_on_fullscreen_toggled"]
[connection signal="value_changed" from="CenterContainer/SettingsMenu/mainvolslider" to="." method="_on_mainvolslider_value_changed"]
[connection signal="value_changed" from="CenterContainer/SettingsMenu/musicvolslider" to="." method="_on_musicvolslider_value_changed"]
[connection signal="value_changed" from="CenterContainer/SettingsMenu/sfxvolslider" to="." method="_on_sfxvolslider_value_changed"]
